# scikit-opls

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGES.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  zensical.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
api/inspection/: index.html
api/opls/: index.html
api/opls_cv/: index.html
api/opls_da/: index.html
api/plotting/: index.html
api/selection/: index.html
api/validation/: index.html
changelog/: index.html
docs/: changelog.md  index.md  installation.md  quickstart.md
docs/api/: inspection.md  o2pls.md  opls.md  opls_cv.md  opls_da.md  plotting.md  selection.md  validation.md
examples/: colorectal_cancer_nmr_oplsda.py  o2pls_synthetic.py  palmerpenguins_opls_regression.py
installation/: index.html
quickstart/: index.html
search/: search_index.json
src/scikit-opls/: foo.py
src/scikit_opls/: __init__.py  _inspection.py  _o2pls.py  _o2pls_core.py  _opls.py  _opls_da.py  _orthogonal.py  _preprocessing.py  _search.py  _utils.py  _validation.py  inspection.py  metrics.py  plotting.py  selection.py  validation.py  version.py  vip.py
tests/: __init__.py  _data.py  test_contracts.py  test_diagnostics.py  test_estimator_compat.py  test_feature_names.py  test_metrics_vip.py  test_o2pls.py  test_o2pls_core.py  test_opls.py  test_opls_coefficients.py  test_opls_da.py  test_optional_dependencies.py  test_orthogonal.py  test_plotting.py  test_preprocessing.py  test_search.py  test_selection.py  test_sklearn_compat.py  test_validation.py  test_vip.py
