[project]
name = "scikit-opls"
version = "0.1.0"
description = "Orthogonal PLS (OPLS / OPLS-DA) with a scikit-learn interface"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scikit_opls"]
