[project]
name = "scikit-opls"
version = "0.1.0"
description = "Orthogonal PLS (OPLS / OPLS-DA) with a scikit-learn interface"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.4.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
]

[project.urls]
Homepage = "https://github.com/HauserGroup/scikit-opls"
Documentation = "https://hausergroup.github.io/scikit-opls/"
Repository = "https://github.com/HauserGroup/scikit-opls"
"Bug Tracker" = "https://github.com/HauserGroup/scikit-opls/issues"
Changelog = "https://github.com/HauserGroup/scikit-opls/blob/main/CHANGES.md"

[project.optional-dependencies]
# Plotting (scikit_opls.plotting) is the only matplotlib consumer and imports it
# lazily, so it is an opt-in extra: `pip install scikit-opls[plot]`.
plot = ["matplotlib>=3.11.0"]

[dependency-groups]
dev = [
    "matplotlib>=3.11.0",
    "mdformat>=1.0.0",
    "mdformat-gfm>=1.0.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=1.0.4",
    "pre-commit>=4.6.0",
    "pymdown-extensions>=10.0",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scikit_opls"]

[tool.ruff]
# scratch/ is out of scope (see CLAUDE.md) and never linted.
extend-exclude = ["scratch"]

[tool.ruff.lint]
# Encode the scikit-learn coding guidelines explicitly rather than relying on
# Ruff defaults: pycodestyle (E/W), pyflakes (F, catches `import *`/unused),
# isort (I), pep8-naming (N), pyupgrade (UP), pydocstyle (D, numpy convention).
select = ["E", "W", "F", "I", "N", "UP", "D"]
# N803/N806: scikit-learn convention names the 2-D design matrix `X` (uppercase).
ignore = ["N803", "N806"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# Tests and the package __init__ do not need full numpydoc docstrings.
"tests/**" = ["D"]
"src/scikit_opls/__init__.py" = ["D104"]

[tool.ruff.lint.isort]
# Intra-package imports are deliberately relative (e.g. `from ._opls import OPLS`),
# the common convention for an installable third-party package. Ruff's isort
# enforces ordering; `known-first-party` keeps the package grouped correctly.
known-first-party = ["scikit_opls"]

[tool.coverage.run]
source = ["scikit_opls"]
branch = true
omit = ["*/scratch/*"]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "import matplotlib",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
